archive/rcon-monitor-ugly-by-me/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - foo'
  name: mmonit
  namespace: mc20
spec:
  tls:
  - hosts:
    - mmonit.phonkd.net
    secretName: basic-auth
  ingressClassName: nginx
  rules:
  - host: mmonit.phonkd.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mmonit
            port:
              number: 8080
